Add update tag feature
